Fix About section text overflow by adjusting font sizes

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -24,7 +24,7 @@
 }
 
 .about-me p {
-  font-size: 33px;
+  font-size: 20px;
   font-weight: 600;
   line-height: 1.6;
   letter-spacing: 1px;
@@ -59,13 +59,13 @@
     width: 50%;
   }
   .about-me p {
-    font-size: 1.9vw;
-    line-height: 2.3vw;
+    font-size: 1.2vw;
+    line-height: 1.8vw;
   }
 }
 @media only screen and (min-width: 1950px) {
   .about-me p {
-    font-size: 2.5rem;
-    line-height: 2.7rem;
+    font-size: 1.5rem;
+    line-height: 2.2rem;
   }
 }
